--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext{
+        kotlin_version = "1.4.32"
+        kotlinx_coroutine_test_version = '1.4.3'
+        app_compat_version = '1.2.0'
+        core_ktx_version = '1.3.2'
+        constraint_layout_version = '2.0.4'
+        lifecycle_extension_version = '2.2.0'
+        junit_version = '4.13.2'
+        junit_ext_version = '1.1.2'
+        test_runner_version = '1.3.0'
+        core_testing_version = '1.1.1'
+        espresso_core_version = '3.3.0'
+        lifecycle_ktx_version = '2.3.1'
+        retrofit_version = '2.9.0'
+        moshi_converter_version = '2.9.0'
+        retrofit_coroutine_adapter_version = '0.9.2'
+        okhttp_version = '4.9.1'
+        logging_interceptor_version = '3.14.4'
+        material_design_version = '1.3.0'
+        material_support_design_version = '28.0.0'
+        mockk_version = '1.10.6'
+        androidx_test_core_version = '1.3.0'
+    }
+
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-alpha05"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
+        classpath "com.android.tools.build:gradle:7.0.0-alpha14"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,7 +40,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
