--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ buildscript {
         material_support_design_version = '28.0.0'
         mockk_version = '1.10.6'
         androidx_test_core_version = '1.3.0'
+        koin_version= "3.0.1-beta-2"
     }
 
     repositories {
