--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        // Enables Jetpack Compose for this module
+        compose true
+    }
+
+    // Set both the Java and Kotlin compilers to target Java 8.
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -65,6 +77,22 @@ dependencies {
     //Material design
     implementation "com.google.android.material:material:$material_design_version"
     implementation "com.android.support:design:$material_support_design_version"
+
+
+    implementation "androidx.compose.runtime:runtime:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.foundation:foundation-layout:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    // Integration with activities
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.3.0-rc01'
+
+
+    androidTestImplementation "androidx.compose.ui:ui-test:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
     // Test
     testImplementation "io.mockk:mockk:$mockk_version"
