--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,18 +5,23 @@
     <application
         android:name=".JetplaneApp"
         android:allowBackup="true"
+        android:fullBackupOnly="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:fullBackupOnly="true"
         android:theme="@style/Theme.Jetplane">
-        <activity android:name=".ui.MainActivity">
+        <activity
+            android:name=".ui.activity.ArticleActivity"
+            android:label="@string/title_activity_article"
+            android:theme="@style/Theme.Jetplane.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.activity.MainActivity">
+
         </activity>
     </application>
 
