--- a/build.gradle
+++ b/build.gradle
@@ -23,14 +23,16 @@ buildscript {
         mockk_version = '1.10.6'
         androidx_test_core_version = '1.3.0'
         koin_version= "3.0.1-beta-2"
+        compose_version = '1.0.0-beta04'
     }
 
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-alpha14"
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha10'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -41,6 +43,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
 }
